Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -6,7 +6,7 @@
 %% See http://texdoc.net/pkg/fontawesome5 and http://texdoc.net/pkg/academicons for full list of symbols. You MUST compile with XeLaTeX or LuaLaTeX if you want to use academicons.
 % 2.54 cm
 % Change the page layout if you need to
-\geometry{left=2cm,right=1.75cm,top=1.75cm,bottom=1.75cm}
+\geometry{left=2cm,right=2cm,top=2cm,bottom=2cm}
 
 \sloppy
 % \hyphenpenalty=100
@@ -112,6 +112,7 @@ Machine Learning Engineer and Researcher with over two years of experience in ap
 
 \cvevent{Machine Learning Engineer}{\href{http://www.wso2.com}{WSO2}}{Sept 2020 - Nov 2021}{Colombo, Sri Lanka} 
 WSO2 is one of the world's leading open-source integration vendors. Choreo is its latest product, providing an AI-enhanced integrated platform as a service.
+\medskip
 \begin{itemize} 
     \item Researched, engineered and deployed the initial phase of Choreo's AI-assisted testing feature, using Python, Keras, Flask, Kubernetes and Azure DevOps pipelines.
     \item Architected, developed and deployed Choreo’s AI-based anomaly detector with two other engineers, using Azure solutions, Ballerina, and Python, while adhering to security best practices, scaling requirements, and optimised resource usage.
@@ -123,6 +124,7 @@ WSO2 is one of the world's leading open-source integration vendors. Choreo is it
 \clearpage
 \cvevent{Software Research Engineer (Intern)}{\href{https://www.pearson.com/}{Pearson}}{Sept 2018 - Sept 2019}{Colombo, Sri Lanka}   % chktex 8
 Pearson is a leading Education provider, offering curriculum materials, multimedia learning tools, and testing programs to help educate people worldwide.
+\medskip
 \begin{itemize}
     \item Collaborated with two other engineers to create the minimum viable product of AI-based Public Speaking Evaluator Service (APSES) while contributing to emotion detection and speech analysis features, using Python, Keras, OpenCV, Kaldi and Flask.
     \item Investigated on Question and Answering and built the minimal viable product of a Chatbot, which answers students' questions based on Pearson books and other documentation, using a modified version of the Bi-Directional Attention Flow (BiDAF) model, Python and Django.
@@ -156,18 +158,18 @@ Pearson is a leading Education provider, offering curriculum materials, multimed
 \cvsection{Achievements}
 \begin{itemize}
     % Technical / Academic
-    \item \textbf{1st Place (2022)} and \textbf{2nd Place (2024)} – SPARC FAIR Codeathon, organised by SPARC Data and Resource Centre and the NIH.
-    \item \textbf{4th Place} – DataStorm 2020 Datathon, organised by Octave (JKH) and University of Moratuwa.
-    \item \textbf{1st Runner-Up} – National Youth Software Competition 2017, organised by UNDP Sri Lanka.
-    \item \textbf{Dean’s List Honouree} – Recognised in all four academic years of the B.Sc. programme.
+    \item \textbf{1st Place (2022)} and \textbf{2nd Place (2024)} in the international SPARC FAIR Codeathon, representing the University of Auckland, organised by the SPARC Data and Resource Centre and the NIH.
+    \item \textbf{4th Place} in DataStorm 2020 Datathon, organised by Octave (JKH) and University of Moratuwa.
+    \item \textbf{1st Runner-Up} in National Youth Software Competition 2017, organised by UNDP Sri Lanka.
+    \item \textbf{Dean’s List Honouree}, recognised in all four academic years of the B.Sc. programme.
 
     % Leadership & Management
-    \item \textbf{Vice President} – Marketing \& Communications at AIESEC in the University of Kelaniya in 2018, contributing to local chapter growth.
+    \item \textbf{Vice President} of Marketing \& Communications at AIESEC in the University of Kelaniya in 2018, contributing to local chapter growth.
 
     % Sports & Extracurricular
-    \item \textbf{National University Colours} recipient, \textbf{Black Belter} and \textbf{Women's Captain} in University Karate Team; won multiple national and inter-university medals (2016–2018).
+    \item \textbf{National University Colours} recipient, \textbf{Black Belt} Karate player and \textbf{Women's Captain} in University Karate Team; won multiple national and inter-university medals (2016–2018).
 
-    \item \textbf{Gold Medalist} – Chess, Four Nations Championship 2019, organised by Pearson.
+    \item \textbf{Gold Medalist} in Chess at Four Nations Championship 2019, organised by Pearson.
     \item Represented school at the national level in Karate, Carrom, Kabaddi, and Army Cadet competitions, while also serving as Junior Prefect, Senior Prefect, and Karate Captain.
 
 \end{itemize}
@@ -190,9 +192,9 @@ Pearson is a leading Education provider, offering curriculum materials, multimed
 \cvskill{English}{4}
 \cvskill{Sinhala}{5}
 
-\medskip
-\cvsection{References}
-\textit{Available upon request.}
+% \medskip
+% \cvsection{References}
+% \textit{Available upon request.}
 
 % \vfill
 % \begin{flushright}
