Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -149,7 +149,8 @@ Pearson is a leading Education provider, offering curriculum materials, multimed
 \begin{itemize}
     \item \textbf{Knowledge Areas } --- Deep learning (Vision \& NLP)
     \item \textbf{Programming languages} --- Python, Ballerina, Java SE, Bash
-    \item \textbf{Frameworks and tools} --- Flask, Pytorch, Keras, Numpy, Pandas, Springboot, Git, Agile
+    \item \textbf{Frameworks and tools} --- Pytorch, Keras, Flask, Django, Numpy, Pandas, Scikit-Learn, Plotly, Seaborn, Springboot, Git, Agile
+    \item \textbf{Data handling} --- SQL, Kusto Query Language (KQL), ADX, DVC
     \item \textbf{DevOps} --- Linux, Azure, Kubernetes, Docker, Kustomize, AWS, JMeter
 \end{itemize}
 
