Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -69,7 +69,7 @@
 \personalinfo{%
   {
   \printinfo{\faPhone}{+64 22 453 8372}
-  \printinfo{\faAt}{sabe848@aucklanduni.ac.nz}[mailto:sabe848@aucklanduni.ac.nz]
+  \printinfo{\faAt}{savindi.narmada@gmail.com}[mailto:savindi.narmada@gmail.com]
   \printinfo{\faMapMarker*}{Auckland, New Zealand}\\
   \printinfo{\faGlobe}{savindi.com}[https://savindi.com]
   \printinfo{\faLinkedin}{linkedin.com/in/savindi}[https://linkedin.com/in/savindi]
