Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -150,7 +150,7 @@ Pearson is a leading Education provider, offering curriculum materials, multimed
     \item \textbf{Knowledge Areas } --- Deep learning (Vision \& NLP)
     \item \textbf{Programming languages} --- Python, Ballerina, Java SE, Bash
     \item \textbf{Frameworks and tools} --- Pytorch, Keras, Flask, Django, Numpy, Pandas, Scikit-Learn, Plotly, Seaborn, Springboot, Git, Agile
-    \item \textbf{Data handling} --- SQL, Kusto Query Language (KQL), ADX, DVC
+    \item \textbf{Data handling} --- SQL, Kusto Query Language (KQL), ADX, DVC, REST, gRPC
     \item \textbf{DevOps} --- Linux, Azure, Kubernetes, Docker, Kustomize, AWS, JMeter
 \end{itemize}
 
@@ -188,10 +188,10 @@ Pearson is a leading Education provider, offering curriculum materials, multimed
 
 \medskip
 
-\cvsection{Languages}
+% \cvsection{Languages}
 
-\cvskill{English}{4}
-\cvskill{Sinhala}{5}
+% \cvskill{English}{4}
+% \cvskill{Sinhala}{5}
 
 % \medskip
 % \cvsection{References}
