Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -87,6 +87,31 @@ Machine Learning Engineer and Researcher with over two years of experience in ap
 
 \medskip
 
+\cvsection{Experience}
+
+\cvevent{Machine Learning Engineer}{\href{http://www.wso2.com}{WSO2} $\cdot$ Full-time}{Sept 2020 - Nov 2021}{Colombo, Sri Lanka} 
+WSO2 is one of the world's leading open-source integration vendors. Choreo is its latest product, providing an AI-enhanced integrated platform as a service.
+\medskip
+\begin{itemize} 
+    \item Researched, engineered and deployed the initial phase of Choreo's AI-assisted testing feature, using Python, Keras, Flask, Kubernetes and Azure DevOps pipelines.
+    \item Architected, developed and deployed Choreo’s AI-based anomaly detector with two other engineers, using Azure solutions, Ballerina, and Python, while adhering to security best practices, scaling requirements, and optimised resource usage.
+    \item Diagnosed and resolved a critical memory leak in the Ballerina Language Server using JMeter and Eclipse Memory Analyser (MAT), which helped in the optimisation of resources in Choreo.
+    \item Contributed to automating the performance testing of Choreo by creating a library and a pipeline for system metrics collection using Python, Kusto Query Language (KQL), Seaborn, and Azure DevOps pipelines.
+\end{itemize}
+
+\divider{}
+
+\cvevent{Software Research Engineer}{\href{https://www.pearson.com/}{Pearson} $\cdot$ Internship}{Sept 2018 - Sept 2019}{Colombo, Sri Lanka}   % chktex 8
+Pearson is a leading Education provider, offering curriculum materials, multimedia learning tools, and testing programs to help educate people worldwide.
+\medskip
+\begin{itemize}
+    \item Collaborated with two other engineers to create the minimum viable product of AI-based Public Speaking Evaluator Service (APSES) while contributing to emotion detection and speech analysis features, using Python, Keras, OpenCV, Kaldi and Flask.
+    \item Investigated on Question and Answering and built the minimal viable product of a Chatbot, which answers students' questions based on Pearson books and other documentation, using a modified version of the Bi-Directional Attention Flow (BiDAF) model, Python and Django.
+    \item Researched and engineered the minimal viable product which automatically classifies flashcards created by the system or users under available topics, using the Universal Language Model Fine-Tuning (ULMFiT) model, Python and Django.
+\end{itemize}
+
+\medskip
+
 \cvsection{Education}
 
 \cvevent{Ph.D. in Bioengineering \small{(under examination)}}{University of Auckland}{Dec 2021 - May 2025}{Auckland, New Zealand}   
@@ -104,31 +129,6 @@ Machine Learning Engineer and Researcher with over two years of experience in ap
 \begin{itemize}
     \item Specialised in Data Science and Net-centric application development
     \item Attained a GPA of 3.96 out of 4.00, obtaining a First Class.
-\end{itemize}
-
-\medskip
-
-\cvsection{Experience}
-
-\cvevent{Machine Learning Engineer}{\href{http://www.wso2.com}{WSO2}}{Sept 2020 - Nov 2021}{Colombo, Sri Lanka} 
-WSO2 is one of the world's leading open-source integration vendors. Choreo is its latest product, providing an AI-enhanced integrated platform as a service.
-\medskip
-\begin{itemize} 
-    \item Researched, engineered and deployed the initial phase of Choreo's AI-assisted testing feature, using Python, Keras, Flask, Kubernetes and Azure DevOps pipelines.
-    \item Architected, developed and deployed Choreo’s AI-based anomaly detector with two other engineers, using Azure solutions, Ballerina, and Python, while adhering to security best practices, scaling requirements, and optimised resource usage.
-    \item Diagnosed and resolved a critical memory leak in the Ballerina Language Server using JMeter and Eclipse Memory Analyser (MAT), which helped in the optimisation of resources in Choreo.
-    \item Contributed to automating the performance testing of Choreo by creating a library and a pipeline for system metrics collection using Python, Kusto Query Language (KQL), Seaborn, and Azure DevOps pipelines.
-\end{itemize}
-
-% \divider{}
-\clearpage
-\cvevent{Software Research Engineer (Intern)}{\href{https://www.pearson.com/}{Pearson}}{Sept 2018 - Sept 2019}{Colombo, Sri Lanka}   % chktex 8
-Pearson is a leading Education provider, offering curriculum materials, multimedia learning tools, and testing programs to help educate people worldwide.
-\medskip
-\begin{itemize}
-    \item Collaborated with two other engineers to create the minimum viable product of AI-based Public Speaking Evaluator Service (APSES) while contributing to emotion detection and speech analysis features, using Python, Keras, OpenCV, Kaldi and Flask.
-    \item Investigated on Question and Answering and built the minimal viable product of a Chatbot, which answers students' questions based on Pearson books and other documentation, using a modified version of the Bi-Directional Attention Flow (BiDAF) model, Python and Django.
-    \item Researched and engineered the minimal viable product which automatically classifies flashcards created by the system or users under available topics, using the Universal Language Model Fine-Tuning (ULMFiT) model, Python and Django.
 \end{itemize}
 
 \medskip
