--- a/main.tex
+++ b/main.tex
@@ -132,20 +132,9 @@ A deep learning centred computational framework was developed for automated 3D g
 
 \cvevent{B.Sc. (Hons.) in Software Engineering}{University of Kelaniya}{Feb 2016 - Mar 2020}{Kelaniya, Sri Lanka}   % chktex 8
 \begin{itemize}
-    \item Specialised in Data Science and Net-centric application development
+    \item Specialised in Data Science and Net-centric application development.
     \item Attained a GPA of 3.96 out of 4.00, obtaining a First Class.
 \end{itemize}
-
-\medskip
-
-% % \pagebreak
-% \cvsection{Certifications}
-
-% \begin{itemize}
-%     \item \cvevent{AI for Medical Diagnosis}{DeepLearning.AI}{May 2021}{}
-%     \item \cvevent{Deep Learning Specialisation}{DeepLearning.AI}{Dec 2020}{}
-%     \item \cvevent{TensorFlow Developer Specialisation}{DeepLearning.AI}{July 2020}{}
-% \end{itemize}
 
 \medskip
 
