Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,7 @@
 
 \cvsection{Summary}
 
-Machine Learning Engineer and Researcher with 2+ years of industry experience developing and deploying scalable deep learning systems in cloud-native environments. PhD (under examination) from the University of Auckland, with research spanning medical imaging, deep learning, applied mathematics, and computational analysis. Brings 6+ years of experience in Python, along with extensive work across modern ML frameworks, containerisation, orchestration, and CI/CD pipelines. Focused on translating research into robust, real-world AI solutions.
+Machine Learning Engineer and Researcher with 2+ years of industry experience developing and deploying scalable deep learning systems in cloud-native environments. PhD (submitted) from the University of Auckland, with research spanning medical imaging, deep learning, applied mathematics, and computational analysis. Brings 6+ years of experience in Python, along with extensive work across modern ML frameworks, containerisation, orchestration, and CI/CD pipelines. Focused on translating research into robust, real-world AI solutions.
 
 \medskip
 
@@ -119,7 +119,7 @@ Pearson is a leading Education provider, offering curriculum materials, multimed
 
 \cvsection{Education}
 
-\cvevent{Ph.D. in Bioengineering \small{(under examination)}}{University of Auckland}{Dec 2021 - May 2025}{Auckland, New Zealand}   
+\cvevent{Ph.D. in Bioengineering \small{(submitted)}}{University of Auckland}{Dec 2021 - May 2025}{Auckland, New Zealand}   
 A deep learning centred computational framework was developed for automated 3D gastric microstructure analysis, integrating biomedical imaging, model-based tissue segmentation, and downstream computational quantification to enable scalable, reproducible anatomical assessment and modelling.
 \begin{itemize}
     \item Engineered a semantic segmentation model to distinguish gastric tissue layers, integrating multiscale channel and spatial attention concepts, implementing numerous ablation studies, and saving over 40 hours per dataset.
