--- a/main.tex
+++ b/main.tex
@@ -93,7 +93,7 @@ Machine Learning Engineer and Researcher with 2+ years of industry experience de
 WSO2 is one of the world's leading open-source integration vendors. Choreo is its latest product, providing an AI-enhanced integrated platform as a service.
 \medskip
 \begin{itemize} 
-    \item Researched, developed, and deployed phase 1 of Choreo’s AI Test Assistant service end-to-end, including dataset creation via XML/OpenAPI scraping, iterative hypothesis testing, and model development using Python, Keras, and GPT-based experimentation for natural language understanding. Built the infrastructure with Flask, Docker, Kubernetes, and Azure, incorporating CI/CD, unit tests, and OpenAPI compliance.
+    \item Researched, developed, and deployed Choreo’s AI Test Assistant service end-to-end, including dataset creation via XML/OpenAPI scraping, iterative hypothesis testing, and model development using Python, Keras, and GPT-based experimentation for natural language understanding. Built the infrastructure with Flask, ONNX, Docker, Kubernetes, and Azure, incorporating CI/CD, unit tests, and OpenAPI compliance.
     \item Co-architected and implemented Choreo’s AI Anomaly Detection system using Azure Stream Analytics, Event Hubs, SQL, and Function Apps; led the design of the alerting pipeline, including suppression policies and metric correlation.
     \item Automated Choreo’s performance testing by building a Python library and Azure DevOps pipeline for system metrics collection and analysis, improving observability, and supporting data collection for ML models.
     \item Diagnosed and resolved a critical memory leak in the Ballerina Language Server using JMeter and Eclipse Memory Analyser (MAT), which helped in the optimisation of resources in Choreo.
@@ -120,7 +120,7 @@ Pearson is a leading Education provider, offering curriculum materials, multimed
 \cvsection{Education}
 
 \cvevent{Ph.D. in Bioengineering \small{(submitted)}}{University of Auckland}{Dec 2021 - May 2025}{Auckland, New Zealand}   
-A deep learning centred computational framework was developed for automated 3D gastric microstructure analysis, integrating biomedical imaging, model-based tissue segmentation, and downstream computational quantification to enable scalable, reproducible anatomical assessment and modelling.
+A deep learning centred computational framework was developed for automated 3D gastric microstructure analysis, integrating dataset curation, ground truth labelling, semantic segmentation, and downstream 3D computational quantification to enable scalable, reproducible anatomical assessment and modelling.
 \begin{itemize}
     \item Engineered a semantic segmentation model to distinguish gastric tissue layers, integrating multiscale channel and spatial attention concepts, implementing numerous ablation studies, and saving over 40 hours per dataset.
     \item Developed a robust three-dimensional gastric tissue quantification framework using advanced mathematical techniques in Python; delivered precise measurements from 20+ tissue samples, establishing the first benchmark for future research.
@@ -134,17 +134,19 @@ A deep learning centred computational framework was developed for automated 3D g
 \begin{itemize}
     \item Specialised in Data Science and Net-centric application development.
     \item Attained a GPA of 3.96 out of 4.00, obtaining a First Class.
+    \item Dean’s List Honouree, recognised in all four academic years of the B.Sc. programme.
 \end{itemize}
 
 \medskip
 
 \cvsection{Technical Skills}
 \begin{itemize}
-    \item \textbf{Knowledge Areas:} Deep Learning (Computer Vision \& Natural Language Processing)
+    \item \textbf{Knowledge Areas:} Deep Learning (Computer Vision, Natural Language Processing \& Signal Processing)
+    \item \textbf{Data types:} Text, Image, Video, Audio, Time series, 3D data, Point cloud, Mesh, Tabular
     \item \textbf{Languages \& Frameworks:} Python (Pytorch, Keras, Flask, Django), Java (Spring Boot), Ballerina, Bash
     \item \textbf{Backend \& APIs:} RESTful APIs, gRPC, Event-Driven Integration
-    \item \textbf{Databases \& Data Handling:} Kusto Query Language (KQL), MongoDB, MSSQL, MySQL, ADX, DVC
-    \item \textbf{Cloud Platforms \& DevOps:} Azure, Kubernetes, Docker, CI/CD, AWS, Ansible, Linux
+    \item \textbf{Databases \& Data Handling:} Kusto Query Language (KQL), MSSQL, MySQL, ADX, DVC
+    \item \textbf{Cloud Platforms \& DevOps:} Azure, Kubernetes, Docker, CI/CD, AWS, ONNX, Ansible, Linux
     \item \textbf{Tools \& Methodologies:} Git, Agile, Performance Monitoring (Seaborn, Plotly, JMeter), Debugging (Eclipse MAT), Analysis (Numpy, Pandas), Testing (Unittest)
 \end{itemize}
 
@@ -165,7 +167,6 @@ A deep learning centred computational framework was developed for automated 3D g
     \item \textbf{1st Place (2022)} and \textbf{2nd Place (2024)} in the international SPARC FAIR Codeathon, representing the University of Auckland, organised by the SPARC Data and Resource Centre and the NIH.
     \item \textbf{4th Place} in DataStorm 2020 Datathon, organised by Octave (JKH) and University of Moratuwa.
     \item \textbf{1st Runner-Up} in National Youth Software Competition 2017, organised by UNDP Sri Lanka.
-    \item \textbf{Dean’s List Honouree}, recognised in all four academic years of the B.Sc. programme.
 
     % Leadership & Management
     \item \textbf{Vice President} of Marketing \& Communications at AIESEC in the University of Kelaniya in 2018, contributing to local chapter growth.
