Add customer impact

--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,7 @@
 
 \cvsection{Summary}
 
-Machine Learning Engineer and Researcher with 2+ years of industry experience developing and deploying scalable deep learning systems in cloud-native environments. PhD (submitted) from the University of Auckland, with research spanning medical imaging, deep learning, applied mathematics, and computational analysis. Brings 6+ years of experience in Python, along with extensive work across modern ML frameworks, containerisation, orchestration, and CI/CD pipelines. Focused on translating research into robust, real-world AI solutions.
+Machine Learning Engineer and Researcher with 2+ years of industry experience developing and deploying scalable deep learning systems in cloud-native environments. Brings 6+ years of experience in Python, along with extensive work across modern ML frameworks, containerisation, orchestration, and CI/CD pipelines. PhD (submitted) from the University of Auckland, with research spanning medical imaging, deep learning, applied mathematics, and computational analysis. Focused on translating research into robust, real-world AI solutions.
 
 \medskip
 
@@ -93,10 +93,14 @@ Machine Learning Engineer and Researcher with 2+ years of industry experience de
 WSO2 is one of the world's leading open-source integration vendors. Choreo is its latest product, providing an AI-enhanced integrated platform as a service.
 \medskip
 \begin{itemize} 
-    \item Researched, developed, and deployed Choreo’s AI Test Assistant service end-to-end, including dataset creation via XML/OpenAPI scraping, iterative hypothesis testing, and model development using Python, Keras, and GPT-based experimentation for natural language understanding. Built the infrastructure with Flask, ONNX, Docker, Kubernetes, and Azure, incorporating CI/CD, unit tests, and OpenAPI compliance.
-    \item Co-architected and implemented Choreo’s AI Anomaly Detection system using Azure Stream Analytics, Event Hubs, SQL, and Function Apps; led the design of the alerting pipeline, including suppression policies and metric correlation.
-    \item Automated Choreo’s performance testing by building a Python library and Azure DevOps pipeline for system metrics collection and analysis, improving observability, and supporting data collection for ML models.
-    \item Diagnosed and resolved a critical memory leak in the Ballerina Language Server using JMeter and Eclipse Memory Analyser (MAT), which helped in the optimisation of resources in Choreo.
+    
+    \item Researched and developed a GPT-based deep learning model, using Python, Flask, and Keras, deployed on Azure Kubernetes Service, for automating test case generation for the APIs developed by customers in Choreo, resulting in a reduction of the customers' manual effort.
+    
+    \item Co-architected and implemented Choreo’s AI Anomaly Detection system using Azure Stream Analytics, Event Hubs, T-SQL, and Function Apps, integrating microservices via event-driven architecture for secure, scalable cloud deployment, enabling customers to detect abnormal application behaviours early on.
+    
+    \item Implemented regression tests for detecting performance degradations and resource utilization issues in the Ballerina Language Server in the Choreo Editor, using Python, JMeter, Azure Log Analytics Workspace, and Azure DevOps pipelines, ensuring consistent performance and reliability for users.
+    
+    \item Diagnosed and resolved a critical memory leak in the Ballerina Language Server using JMeter and Eclipse Memory Analyser, which prevented server crashes and improved resource efficiency in the Choreo Editor.
 \end{itemize}
 
 \divider{}
@@ -125,7 +129,7 @@ A deep learning centred computational framework was developed for automated 3D g
     \item Engineered a semantic segmentation model to distinguish gastric tissue layers, integrating multiscale channel and spatial attention concepts, implementing numerous ablation studies, and saving over 40 hours per dataset.
     \item Developed a robust three-dimensional gastric tissue quantification framework using advanced mathematical techniques in Python; delivered precise measurements from 20+ tissue samples, establishing the first benchmark for future research.
     \item Developed a comprehensive computational model compiling crucial geometric information alongside quantification details sourced from 8 distinct experiments, enabling future in-silico experiments.
-    \item Conducted biological experiments to collect and prepare rodent stomachs for micro CT imaging, resulting in a streamlined process that enhanced sample quality and consistency across 15 experimental trials.
+    \item Established an experimentation protocol by conducting biological experiments to collect and prepare rodent stomachs for micro CT imaging, resulting in a streamlined process that enhanced sample quality and consistency across 15 experimental trials.
 \end{itemize}
 
 \divider{}
@@ -140,14 +144,18 @@ A deep learning centred computational framework was developed for automated 3D g
 \medskip
 
 \cvsection{Technical Skills}
+
 \begin{itemize}
     \item \textbf{Knowledge Areas:} Deep Learning (Computer Vision, Natural Language Processing \& Signal Processing)
     \item \textbf{Data types:} Text, Image, Video, Audio, Time series, 3D data, Point cloud, Mesh, Tabular
-    \item \textbf{Languages \& Frameworks:} Python (Pytorch, Keras, Flask, Django), Java (Spring Boot), Ballerina, Bash
-    \item \textbf{Backend \& APIs:} RESTful APIs, gRPC, Event-Driven Integration
-    \item \textbf{Databases \& Data Handling:} Kusto Query Language (KQL), MSSQL, MySQL, ADX, DVC
-    \item \textbf{Cloud Platforms \& DevOps:} Azure, Kubernetes, Docker, CI/CD, AWS, ONNX, Ansible, Linux
-    \item \textbf{Tools \& Methodologies:} Git, Agile, Performance Monitoring (Seaborn, Plotly, JMeter), Debugging (Eclipse MAT), Analysis (Numpy, Pandas), Testing (Unittest)
+    \item \textbf{Programming languages:} Python, Java
+    \item \textbf{Cloud Platforms:} Azure, AWS
+    \item \textbf{Frameworks:} Pytorch, Keras, Flask, Django, Spring Boot
+    \item \textbf{Databases \& Data handling:} Relational (MSSQL), time series (Azure Data Explorer), stream data (Azure Stream Analytics), Transact-SQL, Kusto Query Language
+    \item \textbf{Containerization:} Docker, Kubernetes, Azure Kubernetes Service
+    \item \textbf{CI/CD tools:} Git, GitHub, GitHub actions, Azure DevOps Pipelines
+    \item \textbf{API Protocols:} REST, gRPC
+    \item \textbf{Software Development Methodologies:} Agile
 \end{itemize}
 
 \medskip
