--- a/main.tex
+++ b/main.tex
@@ -83,7 +83,7 @@
 
 \cvsection{Summary}
 
-Machine Learning Engineer and Researcher with 2+ years of industry experience developing and deploying scalable deep learning systems in cloud-native environments. Brings 6+ years of experience in Python, along with extensive work across modern ML frameworks, containerisation, orchestration, and CI/CD pipelines. PhD (submitted) from the University of Auckland, with research spanning medical imaging, deep learning, applied mathematics, and computational analysis. Focused on translating research into robust, real-world AI solutions.
+Machine Learning Engineer and Researcher with 2+ years of industry experience developing and deploying scalable deep learning systems in cloud-native environments. Brings 6+ years of experience in Python, along with extensive work across modern ML frameworks, containerisation, orchestration, and CI/CD pipelines. PhD from the University of Auckland, with research spanning medical imaging, deep learning, applied mathematics, and computational analysis. Focused on translating research into robust, real-world AI solutions.
 
 \medskip
 
@@ -129,13 +129,11 @@ Pearson is a leading Education provider, offering curriculum materials, multimed
 
 \cvsection{Education}
 
-\cvevent{Ph.D. in Bioengineering \small{(submitted)}}{University of Auckland}{Dec 2021 - May 2025}{Auckland, New Zealand}   
+\cvevent{Ph.D. in Bioengineering}{University of Auckland}{Dec 2021 - May 2025}{Auckland, New Zealand}   
 A deep learning centred computational framework was developed for automated 3D gastric microstructure analysis, integrating dataset curation, ground truth labelling, semantic segmentation, and downstream 3D computational quantification to enable scalable, reproducible anatomical assessment and modelling.
 \begin{itemize}
-    \item Engineered a semantic segmentation model to distinguish gastric tissue layers, integrating multiscale channel and spatial attention concepts, implementing numerous ablation studies, and saving over 40 hours per dataset.
-    \item Developed a robust three-dimensional gastric tissue quantification framework using advanced mathematical techniques in Python; delivered precise measurements from 20+ tissue samples, establishing the first benchmark for future research.
-    \item Developed a comprehensive computational model compiling crucial geometric information alongside quantification details sourced from 8 distinct experiments, enabling future in-silico experiments.
-    \item Established an experimentation protocol by conducting biological experiments to collect and prepare rodent stomachs for micro CT imaging, resulting in a streamlined process that enhanced sample quality and consistency across 15 experimental trials.
+    \item Engineered a semantic segmentation model integrating multiscale channel and spatial attention mechanisms; conducted extensive ablation studies to optimize architecture, resulting in an automated pipeline that reduced manual analysis time by over 40 hours per dataset.
+    \item Developed a robust Python-based 3D quantification framework and data pipeline, transforming raw micro-CT data into structured geometric benchmarks; standardised the workflow from ground-truth labelling to downstream in-silico modelling across 20+ experimental samples.
 \end{itemize}
 
 \divider{}
