Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -90,7 +90,7 @@ Machine Learning Engineer and Researcher with 2+ years of industry experience de
 \cvsection{Experience}
 
 \cvevent{Intermediate Machine Learning Engineer}{\href{https://www.auror.co}{Auror} $\cdot$ Full-time}{Sept 2025 - Present}{Auckland, New Zealand} 
-Auror is a Retail Crime Intelligence platform that provides AI-enhanced capabilities to prevent crime and reduce harm.
+Auror is a retail crime intelligence platform that provides AI-enhanced capabilities to prevent crime and reduce harm.
 % \medskip
 
 \divider{}
