Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -83,15 +83,19 @@
 
 \cvsection{Summary}
 
-Machine Learning Engineer and Researcher with 2+ years of industry experience developing and deploying scalable deep learning systems in cloud-native environments. Brings 6+ years of experience in Python, along with extensive work across modern ML frameworks, containerisation, orchestration, and CI/CD pipelines. PhD from the University of Auckland, with research spanning medical imaging, deep learning, applied mathematics, and computational analysis. Focused on translating research into robust, real-world AI solutions.
+Machine Learning Engineer and Researcher with 3 years of industry experience developing and deploying scalable deep learning systems in cloud-native environments. Brings 7 years of experience in Python, along with extensive work across modern ML frameworks, containerisation, orchestration, and CI/CD pipelines. PhD from the University of Auckland, with research spanning medical imaging, deep learning, applied mathematics, and computational analysis. Focused on translating research into robust, real-world AI solutions.
 
 \medskip
 
 \cvsection{Experience}
 
 \cvevent{Intermediate Machine Learning Engineer}{\href{https://www.auror.co}{Auror} $\cdot$ Full-time}{Sept 2025 - Present}{Auckland, New Zealand} 
-Auror is a retail crime intelligence platform that provides AI-enhanced capabilities to prevent crime and reduce harm.
-% \medskip
+Auror is a retail crime intelligence platform that provides AI-enhanced capabilities to prevent crime.
+\begin{itemize}
+    \item Architected and developed a modular and extendible ML evaluation and fairness reporting framework to accelerate the prospect trial phase; reduced report turnaround by 80\%, shortening the path to technical win.
+
+    \item Optimized Vision-Language Model (VLM) performance by engineering robust prompt strategies to mitigate edge-case failures; ensured production readiness and model reliability for a new Auror feature.
+\end{itemize}
 
 \divider{}
 
@@ -121,7 +125,7 @@ Pearson is a leading Education provider, offering curriculum materials, multimed
 
     \item Investigated and developed a flashcard classification service using ULMFiT, LSTM, and GRU to automatically categorise flashcards created by students or the system, deployed via Django REST framework.
 
-    \item Evaluated and tested NoSQL and relational database migration strategies (MongoDB, MSSQL, MySQL) and conducted performance testing on ScaleOut State Servers within AWS EC2 environments.
+    % \item Evaluated and tested NoSQL and relational database migration strategies (MongoDB, MSSQL, MySQL) and conducted performance testing on ScaleOut State Servers within AWS EC2 environments.
 
 \end{itemize}
 
